--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.6.2",
+    "recoil": "^0.7.6",
     "sass": "^1.57.1",
     "uuid": "^9.0.0"
   },
